ActionSetView/fix: remove default overflow

--- a/src/AccordionView/AccordionView.module.css
+++ b/src/AccordionView/AccordionView.module.css
@@ -47,5 +47,6 @@
 }
 .actionset{
     flex:1;
+    overflow:auto hidden;
     --spacing:var(--actionspacing) !important;
 }
